--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
+!sites/*/settings.ddev.php
 
 # Ignore paths that contain user-generated content.
 # sites/*/files # Mukurtu patch -- we *want* sites/default/files in the rep so the end-user does not need to create it. Instead, we add the files dir into the rep, and add a .gitignore within there so that files within it are ignored but the directory is included.
 sites/*/private
 
-# Ignore ddev config.
+# Ignore ddev config except for php/my-php.ini.
 .ddev/*
+!.ddev/php/my-php.ini
 
 # Ignore VS Code config.
 .vscode/*
